tests/paczka1/small_fuzzy/52581282.err
Error in line 1: 7HtHUD2l A230 32,0
Error in line 4: Udwe A230 52,4
Error in line 3: 7HtHUD2l A961 8,1
Error in line 10: Udwe A961 31,8
